- Updated business location in footer - fixed nav close button bug on mobile

--- a/style.css
+++ b/style.css
@@ -318,7 +318,7 @@ p {
 
   .mobile-nav-toggle {
     display: block;
-    position: absolute;
+    position: fixed;
     /* z-index: 9999; */
 
     background-color: transparent;
